<resources>
    <string name="app_name">Racing.by</string>
    <string name="title_activity_feed">Главная</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main">Новости дрифта</string>
    <string name="title_activity_video_yt">Влог Racing.by</string>
    <!-- Пункты меню -->
    <string name="news_item">Главная</string>
    <string name="events_item">Мероприятия</string>
    <string name="rules_item">Правила дрифта</string>
    <string name="pilots_item">Пилоты</string>
    <string name="communicate_item">Коммуникации</string>
    <string name="online_chat_item">Online-чат</string>
    <string name="vk_item">ВКонтакте</string>
    <string name="inst_item">Instagram</string>
    <string name="gallery_item">Галерея</string>
    <string name="help_item">Справка</string>
    <string name="setting_item">Настройки</string>
    <string name="about_item">О программе</string>
    <string name="leave_item">Выйти из уч. записи</string>
    <string name="facebook_item">Facebook</string>
    <string name="racingby_item">racing.by</string>
    <string name="vlog_item">Влог Racing.by</string>

    <!-- Пилоты -->
    <string name="dmitriynagula">Дмитрий Нагула</string>
    <string name="andreypiskarev">Андрей Пискарёв</string>
    <string name="sergeykabargin">Сергей Кабаргин</string>

    <string name="dmitriynagula_text1">Нагула Дмитрий Михайлович родился 16 августа 1981 года в
        городе Гродно. С 2001 года занимался дрэг-рейсингом. Дмитрий, успешно выступал на
        соревнованиях по дрэг-рейсингу. На протяжении 5 лет, удерживал титул чемпиона Беларуси.
        Дмитрий, был сильно увлечён дрэг-рейсингом и посещал не только белорусские чемпионаты, но и
        ездил за границу. В последние годы до того, как Дмитрий влился в дрифтинг, он принимал
        участие в соревнованиях, которые проходили и в Германии, и в Польше. В принципе, вся
        Восточная Европа Дмитрием была объезжена в дрэг-рейсинге, в результате чего, привозил
        оттуда достаточно много различных кубков, среди которых первые места на King of Poland и
        King of Germany. То есть в тот момент Дмитрию было не до дрифта.</string>
    <string name="dmitriynagula_text2">Спустя некоторое время, Дмитрий как раз выступал в Варшаве
        на фестивале, который объединял в себе дрэг-рейсинг, выставки, и дрифтинг, Дмитрий просто
        сел сбоку в дрифт-такси со своим польским коллегой. Как говорится, прокатился и понял, что
        этот вид спорта интересен. Дмитрий понимал, что в РБ этим уже три года занимаются. И
        буквально через пару месяцев купил у того же поляка машину, на которой тогда прокатился. На
        тот момент это был хороший автомобиль для начинающего дрифтера.</string>
    <string name="dmitriynagula_text3">Первая машина Дмитрия была Mazda RX7. Она уже в Польше
        отъездила года четыре до того, как попала к Дмитрию в руки. Поляки её называли дрифт-кар
        первой генерации. Постройкой автомобиля занимались сами поляки, ориентируясь на то, какое
        они тогда имели представление о дрифте.</string>
    <string name="dmitriynagula_text4">Сначала мощность RX7 была 350 лошадиных сил — это был мотор
        1,5JZ, в принципе, он у Дмитрия и сейчас стоит. 1,5JZ — это блок двигателя от 2JZ
        3-литрового, а голова от 1JZ — собранный вариант. Потом уже в РБ своими силами доработал
        двигатель до 450 л.с. В то время ездили на 17-й резине, на обычных узких колесах 225-235, о
        полусликах речь даже не шла, а мощности были ещё маленькие.</string>
    <string name="dmitriynagula_text5">Внутри, как положено, каркас, ковши и гидроручник. На тот
        момент автомобиль был подготовлен вроде бы и максимально, но 8 лет назад видение было
        чуть-чуть иное. У тех же поляков и знаний было не так уж много, да ни у кого тогда их особо
        не было, поэтому и автомобили по постройке немножко разнятся. Даже первые белорусские
        машины были совсем не такие, как сейчас. И дело не в мощностях, а просто в подходе к
        постройке, в нюансах каких-то. То есть все же растут, Интернет читают, видят конкуренцию.
        Мы же ездим за границу, и к нам приезжают иностранцы, мы всё это берем на заметку. В
        Беларуси ещё осталось довольно много автомобилей по 400 л.с. и они достойно выступают на
        соревнованиях, и даже занимают призовые места.</string>
    <string name="dmitriynagula_text6">На RX7 Дмитрий сразу же начал посещать белорусские
        чемпионаты, а также выезжать на Восточноевропейские этапы, пробовать сложные трассы. Иногда
        даже случайно попадал в ТОП-4. Видимо, новичкам всё же везет. Mazda RX7 нравилась Дмитрию
        тем, что она была старенькая и убитая машинка, которую было не жалко использовать по
        максимуму. Соответственно, на ней он очень сильно рисковал, пытался близко ездить в паре, в
        результате чего приобрел не только нужный опыт, но и сумел получить массу удовольствия.
        Ведь когда автомобиль дорогой и уже построен под себя, то ты его всё равно немного жалеешь,
        например, уже не ставишь слишком близко в парных заездах.</string>
    <string name="dmitriynagula_text7">Дрифтинг очень быстро развивается, что на тот момент, что
        сейчас. Отъездив около трёх сезонов, Дмитрий с отцом (а он с Дмитрием постоянно в
        автоспорте) пришли к такому мнению, что нужно строить что-то новое под себя, так как Mazda
        уже не являлась конкурентоспособной. Дмирию не хватало выворота, мощности и ломалась она
        часто, то есть не было стабильности.</string>
    <string name="dmitriynagula_text8">В итоге в Польше Дмитрий построили свой автомобиль Nissan
        S13, на котором он до сих пор выступаю. Машина соответствует всем правилам, к тому же
        гораздо мощнее.</string>
    <string name="sergeykabargin_text1">Сергей Леонидович Кабаргин пришёл в команду в 2012-ом году.
        Начав обучение с нуля и поменяв 5 боевых машин Сергей поднял свое мастерство до очень
        высокого уровня. Сейчас у пилота три боевых автомобиля: Toyota Supra Брат 1 с мотором
        2JZ-GTE, Toyota Supra Брат 2 с мотором LS7 и Chevrolet Corvette построенный под регламент
        Formula Drift. Недавно Сергей Кабаргин построил новый, уникальный проект «Flanker F».</string>
    <string name="sergeykabargin_text2">The Evil Empire — одна из самых старых дрифт-команд в
        России, базирующаяся в Санкт-Петербурге. Благодаря пилоту Сергею Кабаргину, команда успела
        запомниться несколькими выдающимися проектами, но на этот раз DD Kaba решил вывести свои
        идеи на новый уровень. Сергей четко знал, чего именно он хочет, и команда смогла воплотить
        проект в реальность всего за 12 месяцев. После того как модель рамы и шасси создали в CAD
        машину полностью воссоздали в виде 3Д модели и примерили все кузовные части.</string>
    <string name="sergeykabargin_text3">Все кузовные части были произведены из композитных
        материалов — карбон для интерьера и карбон-кевлар для экстерьера, там, где необходимо
        больше прочности. И всего из около 100 частей машина обрела свои формы. Хотя ЕЕ никогда не
        стеснялись в дизайне экстерьера — эта машина получила осталась более чистой, ее покрасили
        в оранжевый, а местами просто оставили чистый карбон.</string>
    <string name="sergeykabargin_text4">Кастом продолжился и на дисках — тут мы видим 20×9.5 катки
        спереди и 20×12 сзади. Если присмотреть повнимательнее, то можно увидеть лого ddKaba,
        выштампованные на дисках.</string>
    <string name="sergeykabargin_text5">Двигатель построен на блоке RHS (Racing Head Service):
        алюминиевый LS V8 блок объёмом 7.6-литра. Мотор получил головы Mast Motorsport и впуск от
        Plazmaman Pro Series. После сборки силовой агрегат отправился на настройку в Москву в
        компанию GoshaTurboTech (GTT), где из мотора добыли 640 л.с. и 760 Нм крутящего момента.
        Всю эту мощь в землю передает дифференциал Winters Performance и компоненты коробки
        Samsonas Motorsport. Что касается подвески, то тут вы найдете много кастомных рычагов,
        которые Кабаргин использовал в своих других постройках. Также можно заметить койловеры
        Kenetica Suspension. Тормоза Wilwood 6-типоршневые спереди и 2-хпоршневые сзади. Что
        касательно самого имени авто — на YouTube канале DD Kaba был проведен опрос среди
        подписчиков и выбрано имя ‘Flanker-F’ — кодовое название НАТО для экспериментального
        истребителя КБ Сухго — СУ-37.</string>
    <string name="sergeykabargin_text6">Участник чемпионатов РДС северо-запад, РБ, Ukraine Drift
        Championship, HGK Drift Challenge, Eastern Europe Drift Championship (EEDC), Drift UAE
        Championship, Drift Allstars и Formula Drift (PRO2).</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="name_racing_by">racingby@racing.by</string>
    <string name="title_activity_settings">Настройки</string>

    <string name="title_activity_main_guest">MainActivityGuest</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="action_settings">Settings</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="appwidget_text">Календарь мероприятий</string>
</resources>
