<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/news_item_guest"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/news_item" />
        <item
            android:id="@+id/events_item_guest"
            android:icon="@drawable/ic_menu_events"
            android:title="@string/events_item" />
        <item
            android:id="@+id/pilots_item_guest"
            android:icon="@drawable/ic_menu_pilots"
            android:title="@string/pilots_item" />

        <item android:title="Социальные сети">
            <menu>
                <item
                    android:id="@+id/vk_item_guest"
                    android:icon="@mipmap/ic_menu_vk"
                    android:title="@string/vk_item" />
                <item
                    android:id="@+id/facebook_item_guest"
                    android:icon="@mipmap/ic_menu_facebook"
                    android:title="@string/facebook_item" />
                <item
                    android:id="@+id/inst_item_guest"
                    android:icon="@mipmap/ic_menu_inst"
                    android:title="@string/inst_item" />
            </menu>
        </item>

        <item android:title="Официальный сайт Racing.by">
            <menu>
                <item
                    android:id="@+id/racingby_item_guest"
                    android:icon="@mipmap/ic_menu_racingby"
                    android:title="@string/racingby_item" />
            </menu>
        </item>
    </group>
</menu>
