<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings_item"
        android:orderInCategory="100"
        android:title="@string/setting_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/help_item"
        android:orderInCategory="100"
        android:title="@string/help_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_item"
        android:orderInCategory="100"
        android:title="@string/about_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/leave_item"
        android:orderInCategory="100"
        android:title="@string/leave_item"
        app:showAsAction="never" />
</menu>
